Name:                s3sync
Version:             0.1
Synopsis:            a simple tool similar to rsync for backing up files to S3
Homepage:            https://github.com/jamessanders/s3sync
License:             BSD3
License-file:        LICENSE
Author:              James Sanders
Maintainer:          jimmyjazz14@gmail.com
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2


Executable s3sync
  Main-is: Main.hs             
  hs-source-dirs: src
  Build-depends: base >= 4, 
                 bytestring >= 0.9.1.5, 
                 hS3 >= 0.5.3, 
                 unix >= 2.4.0.0, 
                 filemanip >= 0.3.5.1, 
                 filepath >= 1.1.0.3,
                 directory >= 1.0.1.0,
                 mtl >= 1.1.0.2               
  ghc-options: -O2 

    